<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.drawerlayout.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.FavoriteActivity">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/light_blue_600"
                    app:layout_scrollFlags="scroll"
                    app:navigationIcon="@drawable/ic_arrow_back"
                    app:title="@string/favorite"
                    app:titleTextColor="@color/white" />

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="40dp"
                android:contentDescription="@string/setting"
                android:src="@drawable/ic_search"
                app:backgroundTint="@color/light_blue_600" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="130dp"
                android:contentDescription="@string/setting"
                android:src="@drawable/ic_vertical_align_top"
                app:backgroundTint="@color/light_blue_600" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:background="@color/white"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_banner" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <EditText
                    android:id="@+id/etTag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/keyword"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:scrollbars="vertical"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btStartSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/light_blue_600"
                android:text="@string/search"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.drawerlayout.widget.DrawerLayout>
</layout>
